...
                        paddingLeft: 16,
                        paddingRight: 16,
                        paddingTop: 16,
                        paddingBottom: Math.max(insets.bottom, 20),
                        backgroundColor: colors.backgroundWhite,
                    }}>
                    <ISNewButton title={'Verify'} borderRadius={20} onPress={_verifyOtp} loading={displayLoading} />
                </View>
            </View>
        </>
    );
}

...
